language/move-lang/tests/move_check/naming/unresolved_type_with_args.exp
error: 

   ┌── tests/move_check/naming/unresolved_type_with_args.move:2:28 ───
   │
 2 │     struct Mine<T, U> { f: A<T, U>, g: X<U> }
   │                            ^ Unbound type 'A' in current scope
   │

error: 

   ┌── tests/move_check/naming/unresolved_type_with_args.move:2:40 ───
   │
 2 │     struct Mine<T, U> { f: A<T, U>, g: X<U> }
   │                                        ^ Unbound type 'X' in current scope
   │

error: 

   ┌── tests/move_check/naming/unresolved_type_with_args.move:3:18 ───
   │
 3 │     foo<T, U>(x: S<T>): G<T, U> {
   │                  ^ Unbound type 'S' in current scope
   │

error: 

   ┌── tests/move_check/naming/unresolved_type_with_args.move:3:25 ───
   │
 3 │     foo<T, U>(x: S<T>): G<T, U> {
   │                         ^ Unbound type 'G' in current scope
   │

error: 

   ┌── tests/move_check/naming/unresolved_type_with_args.move:4:16 ───
   │
 4 │         let _: B<U> = (0: P<U, T>);
   │                ^ Unbound type 'B' in current scope
   │

error: 

   ┌── tests/move_check/naming/unresolved_type_with_args.move:4:27 ───
   │
 4 │         let _: B<U> = (0: P<U, T>);
   │                           ^ Unbound type 'P' in current scope
   │

